# look-see

./: README.md  pyproject.toml
app/: demo_datasets.toml  looksee.toml  main.py
app/src/: looksee.py
notebooks/: explore-tuesdays.ipynb
quarto/: report.qmd
test/: test_looksee.py
