[project]
name = "look-see"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydytuesday>=0.0.4",
    "streamlit>=1.42.1",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "notebook>=7.3.2",
    "pytest>=8.3.4",
]
